wider styles; fix some ugly spacing in the pt dashboard

--- a/app/javascript/styles/globals.scss
+++ b/app/javascript/styles/globals.scss
@@ -78,3 +78,9 @@ a:hover, a:active, a:visited, a:focus {
   border-bottom: 1px solid $black;
   padding-bottom: 10px;
 }
+
+.container {
+  @media (min-width: 1200px) {
+    max-width: 85% !important;
+  }
+}
